// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components utils : labels <AgentLabel/> render() should not render the name of the agent because no name is passed 1`] = `
<div
  className="AgentLabel"
>
  <Avatar
    className="avatar"
    email=""
    name=""
    size="26"
    style={Object {}}
    url="https://gorgias.io/profilepicture.png"
  />
</div>
`;

exports[`components utils : labels <AgentLabel/> render() should render the agent icon because no profile picture url nor the \`avatar\` option are passed 1`] = `
<div
  className="AgentLabel"
>
  <span
    className="material-icons md-2"
  >
    account_circle
  </span>
  <span
    className="name"
    style={Object {}}
  >
    Marie Curie
  </span>
</div>
`;

exports[`components utils : labels <AgentLabel/> render() should render the avatar because a profile picture url is passed 1`] = `
<div
  className="AgentLabel"
>
  <Avatar
    className="avatar"
    email=""
    name="Marie Curie"
    size="26"
    style={Object {}}
    url="https://gorgias.io/profilepicture.png"
  />
  <span
    className="name"
    style={Object {}}
  >
    Marie Curie
  </span>
</div>
`;

exports[`components utils : labels <AgentLabel/> render() should render the avatar because the \`avatar\` option is passed but no profile picture url is passed 1`] = `
<div
  className="AgentLabel"
>
  <Avatar
    className="avatar"
    email=""
    name="Marie Curie"
    size="26"
    style={Object {}}
    url=""
  />
  <span
    className="name"
    style={Object {}}
  >
    Marie Curie
  </span>
</div>
`;

exports[`components utils : labels <TeamLabel/> render() should render with default avatar 1`] = `
<div
  className="TeamLabel"
>
  <Avatar
    className="avatar"
    email=""
    name="Team 1"
    size="26"
    style={Object {}}
    url=""
  />
  <span
    className="name"
    style={Object {}}
  >
    Team 1
  </span>
</div>
`;

exports[`components utils : labels <TeamLabel/> render() should render with default avatar and "team" icon 1`] = `
<div
  className="TeamLabel"
>
  <Avatar
    className="avatar"
    email=""
    name="Team 1"
    size="26"
    style={Object {}}
    url=""
  />
  <span
    className="name"
    style={Object {}}
  >
    Team 1
    <span
      className="nameIcon material-icons md-2"
    >
      people
    </span>
  </span>
</div>
`;

exports[`components utils : labels <TeamLabel/> render() should render with emoji 1`] = `
<div
  className="TeamLabel"
>
  <span
    className="avatar"
  >
    <Emoji
      backgroundImageFn={[Function]}
      className="avatar"
      emoji={
        Object {
          "colons": ":wink:",
          "emoticons": Array [
            ";)",
            ";-)",
          ],
          "id": "wink",
          "name": "Winking Face",
          "native": "😉",
          "skin": null,
          "unified": "1f609",
        }
      }
      forceSize={true}
      native={false}
      onClick={[Function]}
      onLeave={[Function]}
      onOver={[Function]}
      set="apple"
      sheetSize={32}
      size={26}
      skin={1}
    />
  </span>
  <span
    className="name"
    style={Object {}}
  >
    Team 1
  </span>
</div>
`;

exports[`components utils : labels <TeamLabel/> render() should render without avatar 1`] = `
<div
  className="TeamLabel"
>
  <span
    className="material-icons md-2"
  >
    people
  </span>
  <span
    className="name"
    style={Object {}}
  >
    Team 1
  </span>
</div>
`;

exports[`components utils : labels <TimedeltaLabel/> render() should render with day duration 1`] = `
<Badge
  className="text-center"
  color="secondary"
  pill={true}
  tag="span"
>
  1 day(s)
</Badge>
`;

exports[`components utils : labels <TimedeltaLabel/> render() should render with hour duration 1`] = `
<Badge
  className="text-center"
  color="secondary"
  pill={true}
  tag="span"
>
  1 hour(s)
</Badge>
`;

exports[`components utils : labels <TimedeltaLabel/> render() should render with minute duration 1`] = `
<Badge
  className="text-center"
  color="secondary"
  pill={true}
  tag="span"
>
  1 minute(s)
</Badge>
`;

exports[`components utils : labels RenderLabel ValueRendered should display name and address formatted as aircall eg: with address into parenthesis 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      "type": "aircall",
      "name": "common",
      "address": "aircall style",
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="aircall"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        phone
      </i>
    </SourceIcon>
    common (aircall style)
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display name and address formatted in-lined 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      "type": "gmail",
      "name": "common",
      "address": "inlined email",
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="gmail"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        email
      </i>
    </SourceIcon>
    common &lt;inlined email&gt;
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display the address to prevent confusion 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      "type": "email",
      "name": "common",
      "meta": Immutable.Map {
        "address": "specific",
      },
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="email"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        email
      </i>
    </SourceIcon>
    common &lt;specific&gt;
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display the name because the address is empty 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      "type": "email",
      "name": "common",
      "meta": Immutable.Map {
        "address": "",
      },
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="email"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        email
      </i>
    </SourceIcon>
    common
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display the name because the type is facebook 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      "type": "facebook",
      "name": "common",
      "meta": Immutable.Map {
        "address": "specific",
      },
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="facebook"
    >
      <i
        className="icon d-inline-block icon-custom icon-facebook mr-2"
      />
    </SourceIcon>
    common
  </span>
</IntegrationsDetailLabel>
`;
